fixed scrollbar

--- a/streaming_media/existing_css.scss
+++ b/streaming_media/existing_css.scss
@@ -107,7 +107,7 @@ audio {
   }
 }
 
-#trending {
+.scroll {
   &::-webkit-scrollbar {
     width: 15px;
   }
@@ -120,6 +120,22 @@ audio {
   }
   &::-webkit-scrollbar-thumb:hover {
     background-color: #020659;
+  }
+}
+
+.playlist-scroll {
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 15px #090e74;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #020659;
+    border-radius: 5px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #2799fc;
   }
 }
 
