--- a/streaming_media/style.css
+++ b/streaming_media/style.css
@@ -102,18 +102,32 @@ audio::-webkit-media-controls-enclosure {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-#trending::-webkit-scrollbar {
+.scroll::-webkit-scrollbar {
   width: 15px;
 }
-#trending::-webkit-scrollbar-track {
+.scroll::-webkit-scrollbar-track {
   box-shadow: inset 0 0 15px #590242;
 }
-#trending::-webkit-scrollbar-thumb {
+.scroll::-webkit-scrollbar-thumb {
   background-color: #590242;
   border-radius: 5px;
 }
-#trending::-webkit-scrollbar-thumb:hover {
+.scroll::-webkit-scrollbar-thumb:hover {
   background-color: #020659;
+}
+
+.playlist-scroll::-webkit-scrollbar {
+  width: 15px;
+}
+.playlist-scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 15px #090e74;
+}
+.playlist-scroll::-webkit-scrollbar-thumb {
+  background-color: #020659;
+  border-radius: 5px;
+}
+.playlist-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #2799fc;
 }
 
 #playlists,
